tests/functional/lang/eval-fail/readDir-not-a-directory-1.err.exp
error:
       … while evaluating the attribute 'regularFile'
         at /pwd/lang/eval-fail/readDir-not-a-directory-1.nix:2:3:
            1| {
            2|   regularFile = builtins.readDir ../readDir/bar;
             |   ^
            3| }

       … while calling the 'readDir' builtin
         at /pwd/lang/eval-fail/readDir-not-a-directory-1.nix:2:17:
            1| {
            2|   regularFile = builtins.readDir ../readDir/bar;
             |                 ^
            3| }

       error: cannot read directory "/pwd/lang/readDir/bar": Not a directory
